# wilson

./: .gitignore  99-wilson-robot.rules  CLAUDE.md  CONTROLLER_FIX_SUMMARY.md  Dockerfile  Dockerfile.raspi  Dockerfile_raspi  NOTICE.md  PERSISTENT_DEVICES.md  README.md  UV_README.md  bashrc  entrypoint.sh  install_udev_rules.sh  pyproject.toml  rpi_bashrc  rpi_entrypoint.sh  wilson.code-workspace
boot/firmware/: config.txt
examples/: test_installation.py  uv_usage_examples.py
gemini/: .python-version  gemini_ros_mcp.py
gemini-live/: README.md  gemini_live.py  pyproject.toml
gemini-live-mcp/: README.md  main.py  mcp_config.json  pyproject.toml
gemini_live/: README.md  gemini_live.py  mcp_config.json  mcp_handler.py  pyproject.toml
src/arduino/: ROSArduinoBridge_original.ino
src/arduino/ROSArduinoBridge/: ROSArduinoBridge.ino  commands.h  diff_controller.h  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino  servos.h
src/arduino/arm_control/: arm_control.ino
src/arduinobot_controller/config/: wilson.code-workspace
src/arduinobot_controller/src/: arduinobot_interface.cpp
src/arm/: ARM_PACKAGE_STRUCTURE.md  Arm_Creation.md  package.xml
src/arm/launch/: send_trajectory.launch.py
src/arm_moveit_config/: .setup_assistant
src/arm_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  r4bot.srdf  ros2_controllers.yaml
src/arm_moveit_config/launch/: demo.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/depth_cam/: package.xml  setup.cfg  setup.py
src/depth_cam/depth_cam/: depth_field.py  (+3 more)
src/discard_pkgs/: gemini_client.py
src/discard_pkgs/arm/: CMakeLists.txt  README.md  arm.xml
src/discard_pkgs/arm/config/: r4bot_controller.yaml
src/discard_pkgs/arm/description/urdf/: old_r4bot_description.urdf.xacro  r4bot.ros2_control.xacro  r4bot.urdf.xacro
src/discard_pkgs/arm/hardware/: r6bot_hardware.cpp
src/discard_pkgs/arm/launch/: r4bot_controller.launch.py  view_r4bot.launch.py
src/discard_pkgs/arm/reference_generator/: send_trajectory.cpp
src/discard_pkgs/myaction/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/discard_pkgs/myaction/action/: CountDown.action
src/discard_pkgs/myaction/launch/: countdown_server.launch.py
src/discard_pkgs/myaction/myaction/: countdown_client.py  countdown_server.py
src/discard_pkgs/pick_place_action/: CMakeLists.txt  README.md
src/gemini/: setup.cfg  setup.py
src/gemini_live/: README.md
src/gemini_mcp/: audio_streams.py  audio_utils.py  config.py  gemini_client.py  mcp_config.json  original_gemini_client.py  requirements.txt  session_manager.py  system_instructions_real.txt  system_instructions_sim.txt  tool_handler.py  video_capture.py
src/grab_drink_action/: CMakeLists.txt  README.md  package.xml
src/locate_drink_action/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/locate_drink_action/action/: LocateDrink.action
src/locate_drink_action/config/: locate_drink_params.yaml  locate_drink_params_real.yaml  locate_drink_params_sim.yaml
src/locate_drink_action/launch/: locate_drink_server.launch.py
src/locate_drink_action/locate_drink_action/: __init__.py  locate_drink_action_server.py
src/move_to_state_action/: CMakeLists.txt  README.md  package.xml
src/move_to_state_action/action/: MoveToState.action
src/move_to_state_action/launch/: move_to_state_server.launch.py
src/move_to_state_action/src/: move_to_state_action_server.cpp
src/mtc_tutorial/: CMakeLists.txt
src/navigate_to_location_action/: CMakeLists.txt  package.xml  setup.py
src/navigate_to_location_action/action/: NavigateToLocation.action
src/navigate_to_location_action/launch/: navigate_to_location_server.launch.py
src/navigate_to_location_action/navigate_to_location_action/: navigate_to_location_server.py
src/pick_place_action/: CMakeLists.txt  README.md  package.xml
src/pick_place_action/action/: PickObject.action
src/pick_place_action/launch/: pick_action_server.launch.py
src/pick_place_action/src/: pick_object_action_server.cpp
src/rosbridge_suite/: pyproject.toml
src/wilson/: CMakeLists.txt  package.xml  package_notes.md
src/wilson/collision_meshes/: body_link.STL  camera_link.STL  depth_camera_link.STL  gripper_base.STL  gripper_left_finger.STL  gripper_right_finger.STL  laser_frame.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL
src/wilson/config/: gazebo_controller_manager.yaml  joint_names_wilson.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_real.yaml  nav2_params_sim.yaml  real_params.yaml  robot_controller_manager.yaml  sim_params.yaml  turtlebot3_use_sim_time.yaml
src/wilson/config/rviz/: sim.rviz  view_robot.rviz
src/wilson/launch/base/: localization_launch.py  navigation_launch.py  rsp.launch.py
src/wilson/launch/real/: cameras_and_locate.launch.py  robot.launch.py  slam_robot.launch.py  wilson.launch.py
src/wilson/launch/sim/: sim.launch.py  slam_sim.launch.py  wilson_sim.launch.py
src/wilson/maps/: downstairs_save.pgm  downstairs_save.yaml  downstairs_serial.data  downstairs_sim.yaml  downstairs_sim_edit.pgm  upstairs_map_save.pgm  upstairs_map_serial.data
src/wilson/meshes/: body_link.STL  camera_link.STL  depth_camera_link.STL  gripper_base.STL  gripper_left_finger.STL  gripper_right_finger.STL  laser_frame.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL
src/wilson/ros2_control/: wilson_system.ros2_control.xacro
src/wilson/scripts/: initial_pose_publisher.py
src/wilson/urdf/: camera.xacro  depth_camera.xacro  end_effector.xacro  end_effector_collisions.xacro  gazebo_references.xacro  lidar.xacro  wheels.xacro  wilson.urdf.xacro  wilson_core.xacro  wilson_core_real.xacro  wilson_moveit.urdf.xacro  wilson_real.urdf.xacro
src/wilson/urdf/Solidworks_export/: wilson.csv  wilson.urdf
src/wilson/worlds/: downstairs_combined.world
src/wilson/worlds/downstairs_building/: model.config  model.sdf
src/wilson/worlds/downstairs_furniture/: model.config  model.sdf
src/wilson_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+170 files in other folders)
