[project]
name = "gemini-live"
version = "1.0.0"
description = "Enable use of ros-mcp-server with Gemini Live API"
requires-python = ">=3.10"
dependencies = [
    "exceptiongroup>=1.2.2",
    "google-genai>=1.8.0",
    "mcp[cli]>=1.6.0",
    "mss>=10.0.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.0",
    "taskgroup>=0.2.2",
]
