<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>locate_drink_action</name>
  <version>0.0.1</version>
  <description>ROS2 action server for locating drinks using Gemini AI and positioning the robot optimally</description>
  <maintainer email="trace@example.com">trace</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Vision dependencies -->
  <depend>cv_bridge</depend>

  <!-- Action interface dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Python dependencies (installed via pip) -->
  <!-- google-genai, opencv-python, pillow, python-dotenv, numpy -->

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Mark as action interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
